# otomodachi

./: .gitignore  README.md  pyproject.toml
otomodachi/: __init__.py  __main__.py  nexauth.py  nexplc.py  proxy.py
